# shu

./: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: check.yml  release.yml
docs/superpowers/plans/: 2026-06-23-plugin-sharing-v1.md  2026-06-27-registry-v1.md  2026-06-27-release-url-registry-intake.md  2026-07-07-ux-polish.md  2026-07-16-windows-port-phase1.md
docs/superpowers/specs/: 2026-06-22-launcher-mvp-design.md  2026-06-23-plugin-sharing-v1-design.md  2026-06-27-registry-v1-design.md  2026-06-27-release-url-registry-intake-design.md  2026-07-07-image-compressor-design.md  2026-07-07-plugin-manager-redesign-design.md  2026-07-07-translator-plugin-design.md  2026-07-08-image-crop-design.md  2026-07-16-windows-port-design.md
plugin-docs/: beta-checklist.md  capabilities.md  examples.md  host-api.md  index.md  manifest.md  packaging.md  plugin-types.md  quickstart.md  security.md
plugin-docs/.vitepress/: config.mts
plugins/hosts-editor/: index.html  plugin.json
plugins/image-compressor/: build.mjs  index.html  index.src.html  plugin.json
plugins/json-preview/: index.html  plugin.json
plugins/storage-fs-demo/: index.html  plugin.json
plugins/translator/: index.html  plugin.json
scripts/: brand.test.mjs  frecency.test.mjs  match.test.mjs  plugin-runtime.test.mjs  registry-intake.mjs  registry-intake.test.mjs  registry.test.mjs  templates.test.mjs  test-mode.test.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/everything/: README.md
src-tauri/src/: lib.rs  main.rs  plugins.rs
src-tauri/src/win/: clipboard.rs  discovery.rs  everything.rs  icons.rs  launch.rs  logic.rs  mod.rs  single_instance.rs
src/lib/: InstallConsent.svelte  PluginManager.svelte  Settings.svelte  TestHarness.svelte  capabilities.ts  frecency.ts  host.ts  match.ts  permissions.ts  pluginRuntime.ts  registry.ts  settings.ts  testMode.ts  types.ts
templates/registry-template/: README.md
templates/registry-template/.github/workflows/: validate-submissions.yml
