[package]
name = "pc-tool"
version = "0.1.0"
description = "Plugin-based launcher (MVP)"
authors = ["yezi"]
edition = "2021"

[lib]
name = "pc_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
dirs = "5"
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSWorkspace",
  "NSImage",
  "NSImageRep",
  "NSBitmapImageRep",
  "NSGraphics",
] }
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSData",
  "NSDictionary",
  "NSGeometry",
] }
