[package]
name = "shu"
version = "0.1.0"
description = "Plugin-based launcher (MVP)"
authors = ["yezi"]
edition = "2021"

[lib]
name = "shu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
dirs = "5"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
zip = "2"
sha2 = "0.10"
ureq = "2"
tauri-plugin-dialog = "2"
imagequant = "4"
lodepng = "3"

# Optimize the PNG decode/encode hot path even in dev builds, otherwise
# clipboard image ops are ~10x slower (image decoding is unusable at opt-level 0).
[profile.dev.package.image]
opt-level = 3
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.dev.package.fdeflate]
opt-level = 3

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSWorkspace",
  "NSImage",
  "NSImageRep",
  "NSBitmapImageRep",
  "NSGraphics",
  "NSGraphicsContext",
  "NSPasteboard",
  "objc2-core-foundation",
] }
objc2-foundation = { version = "0.3", features = [
  "NSString",
  "NSData",
  "NSDictionary",
  "NSArray",
  "NSGeometry",
  "NSURL",
] }
